fix dropdown item on mobile

--- a/asset/sass/blocks/_dropdown.scss
+++ b/asset/sass/blocks/_dropdown.scss
@@ -2,4 +2,10 @@
     &:hover > .dropdown-menu {
         display: block;
     }
+
+    .dropdown-item {
+        @include media-breakpoint-down(xs) {
+            white-space: initial;
+        }
+    }
 }
